--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# my settings file
+# my settings file and useless bin folder090-p
 savedSettings.txt
+bin/*
