--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ hs_err_pid*
 # my custom ignores to make github clean
 .savedSettings.txt
 Client/bin/*
+Server/bin/*
 build.fxbuild
 .project
 .classpath
